Fixed flickering and center positioning

--- a/main.css
+++ b/main.css
@@ -23,3 +23,12 @@
     height: 100px;
     margin-top: -40%;
 }
+
+#refresh
+{
+    position: absolute;
+    margin-left: 55%;
+    width: 300px;
+    height: 100px;
+    margin-top: -30%;
+}
